@@ -8,18 +8,18 @@ DIST clementine-1.1.1.tar.gz 8557109 SHA256 a94dfbd4732155ff1d4f24bb792d9e4def5b
 DIST clementine-1.2.0.tar.gz 9715661 SHA256 563d00da4e893f7b1966ed137bcab28042151e31ea561cb7076047d3cad96f72 SHA512 b7a084f74b1469b8544326a798642aa6a96ff286f1495033e048a0313dca2c365542aabccd00fa3d01399d65a0301068aa93b3b2f6606f84950c51c2e6ef8066 WHIRLPOOL b0fe7de7b85acc75f17880d68782888d44cef6416239e0b76231966e5fe438b0a2960bcec6f90bb7412c703a81d15934fe6bd00222253ecfebd240b3f4061f91
 EBUILD clementine-1.0.1-r1.ebuild 3988 SHA256 bef2486ef6ee396fa919985a62291488db7918bf582dd684bc81b74b018823ca SHA512 71f92c3c6ce0f0ddd3651979bdd915bf79be04d343d312654a95191e0f0cf8f35355761e1d0939a1862628b6221063ba714df3ffeb94bd1b3162c19f51dfc09a WHIRLPOOL 3f1238e4512884af454cf31302ebe8dd13938a7dd312c7d7724f20aa96fddb9b67d56f9803279f1d36812541c2d7de8cbfc436a008a7b8ae549602051297cd86
 EBUILD clementine-1.1.1.ebuild 3982 SHA256 deed13bec9c4ca0724a4631381c533a59cc70b6a7c1584dc31787cf9a286c102 SHA512 85ef4a97b601ad120d32eddc05d3585263a43b449681c3076fed0e2c86039eadf0000823591c636242ca4b5a4fb626a49a2b2a808901713e78ad964289ff0532 WHIRLPOOL a2c130bca8fd74e8ea0834b90ca628888cb79b532accaaf5d6bfe21eb95d878e9dba402eeff43eb8d9e1c076af697298a5eebc76034b21330ca2543f897b0943
-EBUILD clementine-1.2.0.ebuild 4452 SHA256 10fe2ed1ad420ea33c01fa985509793ee6958a159188f30aa42df2714264e532 SHA512 faf9ec2c8597297e1eced0da3ec2772bd26473302ec533d4dec0db0954eb6419ceb85df78e622952e86a0e6cf59d4ea7569ffc6467a7bd35d159ee95db0dde8e WHIRLPOOL 51c0093bb24b851ec9cadc46f291961cfc041f7a819edbacc4c3589e6d66117f5b2fd3850fb470cd40c8b631f23971af86f0b1fb260a290a90ffdc1128f3f915
+EBUILD clementine-1.2.0.ebuild 4508 SHA256 12d6bb6b51a7f661fec8785e92652a00cc92bb67bfeec6f9b91bcc0e5fc9e353 SHA512 3c6e5e953f328bf11d8ef2c4d226cf2e5b8c687f2005df9bf0adddd8ced451fcc04f15cb0004d9d67a7bc21456131f341ea311ad81910473cf42c0a1816f21b8 WHIRLPOOL 2c27993b97b3f94b08891a570de4214ff910d205e926068a8b483123c45222690b9912e2ac5591bdc6b7059f45723b523d6c88f81ce9ebc4fa1e31c1b2a65825
 EBUILD clementine-9999.ebuild 4451 SHA256 daeb6e9557befa6ee2aa4df52fbf181b1b9175e080e6e17d15205fd3c7a9d0af SHA512 f6a1e9f76574ca915ed43928fd7e3efd365de6b5472afdcb201afb9030e69e5725ef711d506ba11545e2eb99affc8f17c731b5d65965aa3dd3245cd154f4273f WHIRLPOOL 8044a0223e475f0f337a7a6b1296e309441a93a8a3c0c350562a8d6f642e07b2ee5c8d59e1431096352e0684de8682b7a7b7669996f58d42774054b719fdb36a
-MISC ChangeLog 12930 SHA256 2a92109f666a0bdffef185406d08a4c9bbb2c0662a283a6d63f9efd782134c01 SHA512 123eb9bcafc9674f476c1a8b8097d2c976817dffbb1382f93891a67624ad390bf682c78aeee3ac8cbd9f698efcaec4df88ca8bc2583f987cda6c2cdc3bbda425 WHIRLPOOL dac20d6c915e48eb0886e7f5daed3fb7d1faf06c949f0218a7a7a06372e5751bca3addf13dd9de72ab0c1a3d83e02a0e4dec2bd5270a1967798f662497ca7b54
+MISC ChangeLog 13052 SHA256 27e24d39c1370c4b34a23dcd4a99927bad64016c370f6ad0ab2362efa80b4a36 SHA512 4ac33ee3e3aa8f87ad2ec2056d15f2f59477b089433ec472311aa780ad30aa805b57da469d0ef007e537b3842d47a83bc63681bbef0d2d630ffd94087e564ea9 WHIRLPOOL 77b494c6cd35f64f1b85706e73b658d06e1b04de4d6bdd024f79159fbcd6c10f27da6f335355f5a2741f3ca1f7133394312987edd774747fbcc7271d24ed97cd
 MISC metadata.xml 929 SHA256 506efb1f51e38234e4d1c1a8e4258287b0c037f62641ebf858a73dc023ee18ef SHA512 d2fb69b1e1d41ae675ab279d6040f2c551ae216f339abb4247a9b74236dac3d1162c99ec87c056464077d71492ef38eefeca85e309c99b6662961971f0adaaf5 WHIRLPOOL 1aa764f3b199a31048a816746e44640e1307f99636a57fe75854564cf5272ed450c0fdb38abff82a008389806f485d534f2c8926bd3572ba93f6467f23be1ebc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJScBYJAAoJEAmJmMX429reo8IH/RDl2J/nHM/utXFI9WsLSiIs
-gcx301k+QMe7w+AxJDgolR4EhfhPXZkW1mBeH6N8o38l5ff51bb9LwhFuoKJlWfo
-TfwnVn76Lh0W4mpdy7dwvvSe7rKVjI5+ij4a8CtxYrP4bEAuf9I+yyXGOSCAlI94
-quCOqy9/0jXeCG0vWOuH/rOzoKyJ/qsZaAHyH2Dbik8PEeN1EBX75z2HImxJbqcg
-byzSq7G6mztGk4TF6dUDgwQm9d5V6W2VYJzrwAcsSCmTJgYbBa86Cnt7PxEEr2EK
-+ndC6kF+D4/ouptaWG6x3RCJqUpXeEqH9EZ00Em6wPiRDSwAVcEWH8a9ZzzoxAY=
-=+KOJ
+iQEcBAEBCAAGBQJShxN9AAoJEO04vUmVeoRjpq4IAJtbzEJDh+2DLhKDxnNJPC4B
+SCKnO/f5SxJOPLatzGtKHbG9DEbVnWp4xglEnPevkvjwElPGD4SLVqqV3pitsgIV
+I6NDWDrq+QEAy0i3YrnqbV4X5QrbIlY6c5OWOPys49HGTwjzAQ8O457yIpfOuP4i
+tVutII2NQ7h3nUGoq4mmOEDLn703HjC4Z4Bt+jnvVMA1rPXc+xrG7rmrepqP5xO9
+2rXZHf6anH49MSyyezxwQOFcRprRcAaFtmf8Du3kVagaVcGVXFqEXuh5NCONGXJ9
+vaUYKnx+1Vzj4JNrkyGEObVEOpAdCb9vgshhK692zSpAkxHEJam3hchVK5gW7W0=
+=zXoK
 -----END PGP SIGNATURE-----
