@@ -1,14 +1,14 @@
 DEFINED_PHASES=compile configure install postinst postrm preinst prepare test
-DEPEND=>=dev-qt/qtgui-4.5:4 dbus? ( >=dev-qt/qtdbus-4.5:4 ) >=dev-qt/qtopengl-4.5:4 >=dev-qt/qtsql-4.5:4[sqlite] system-sqlite? ( dev-db/sqlite[fts3(+)] ) >=media-libs/taglib-1.8[mp4] >=dev-libs/glib-2.24.1-r1 dev-libs/libxml2 dev-libs/protobuf:= dev-libs/qjson media-libs/libechonest:= >=media-libs/libmygpo-qt-1.0.7 >=media-libs/chromaprint-0.6 media-libs/gstreamer:0.10 media-libs/gst-plugins-base:0.10 virtual/glu virtual/opengl ayatana? ( dev-libs/libindicate-qt ) cdda? ( dev-libs/libcdio ) ipod? ( >=media-libs/libgpod-0.8.0 ) lastfm? ( >=media-libs/liblastfm-1 ) mtp? ( >=media-libs/libmtp-1.0.0 ) moodbar? ( sci-libs/fftw:3.0 ) projectm? ( media-libs/glew ) >=dev-libs/boost-1.39 virtual/pkgconfig sys-devel/gettext dev-qt/qttest:4 dev-cpp/gmock box? ( dev-cpp/sparsehash ) dropbox? ( dev-cpp/sparsehash ) googledrive? ( dev-cpp/sparsehash ) skydrive? ( dev-cpp/sparsehash ) ubuntu-one? ( dev-cpp/sparsehash ) test? ( gnome-base/gsettings-desktop-schemas ) sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) >=sys-apps/sed-4 test? ( !prefix? ( x11-base/xorg-server[xvfb] ) x11-apps/xhost )
+DEPEND=app-crypt/qca:2 >=dev-qt/qtgui-4.5:4 dbus? ( >=dev-qt/qtdbus-4.5:4 ) >=dev-qt/qtopengl-4.5:4 >=dev-qt/qtsql-4.5:4[sqlite] system-sqlite? ( dev-db/sqlite[fts3(+)] ) >=media-libs/taglib-1.8[mp4] >=dev-libs/glib-2.24.1-r1 dev-libs/libxml2 dev-libs/protobuf:= dev-libs/qjson media-libs/libechonest:= >=media-libs/libmygpo-qt-1.0.7 >=media-libs/chromaprint-0.6 media-libs/gstreamer:0.10 media-libs/gst-plugins-base:0.10 virtual/glu virtual/opengl ayatana? ( dev-libs/libindicate-qt ) cdda? ( dev-libs/libcdio ) ipod? ( >=media-libs/libgpod-0.8.0 ) lastfm? ( >=media-libs/liblastfm-1 ) mtp? ( >=media-libs/libmtp-1.0.0 ) moodbar? ( sci-libs/fftw:3.0 ) projectm? ( media-libs/glew ) >=dev-libs/boost-1.39 virtual/pkgconfig sys-devel/gettext dev-qt/qttest:4 dev-cpp/gmock box? ( dev-cpp/sparsehash ) dropbox? ( dev-cpp/sparsehash ) googledrive? ( dev-cpp/sparsehash ) skydrive? ( dev-cpp/sparsehash ) ubuntu-one? ( dev-cpp/sparsehash ) test? ( gnome-base/gsettings-desktop-schemas ) sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) >=sys-apps/sed-4 test? ( !prefix? ( x11-base/xorg-server[xvfb] ) x11-apps/xhost )
 DESCRIPTION=A modern music player and library organizer based on Amarok 1.4 and Qt4
 EAPI=5
 HOMEPAGE=http://www.clementine-player.org/ https://code.google.com/p/clementine-player/
 IUSE=ayatana box cdda +dbus debug dropbox googledrive ipod lastfm mms moodbar mtp projectm skydrive system-sqlite test ubuntu-one +udev wiimote linguas_af linguas_ar linguas_be linguas_bg linguas_bn linguas_br linguas_bs linguas_ca linguas_cs linguas_cy linguas_da linguas_de linguas_el linguas_en_CA linguas_en_GB linguas_eo linguas_es linguas_es_AR linguas_et linguas_eu linguas_fa linguas_fi linguas_fr linguas_ga linguas_gl linguas_he linguas_hi linguas_hr linguas_hu linguas_hy linguas_ia linguas_id linguas_is linguas_it linguas_ja linguas_ka linguas_kk linguas_ko linguas_lt linguas_lv linguas_mr linguas_ms linguas_nb linguas_nl linguas_oc linguas_pa linguas_pl linguas_pt linguas_pt_BR linguas_ro linguas_ru linguas_sk linguas_sl linguas_sr linguas_sr@latin linguas_sv linguas_te linguas_tr linguas_uk linguas_uz linguas_vi linguas_zh_CN linguas_zh_TW test
 KEYWORDS=~amd64 ~x86
 LICENSE=GPL-3
-RDEPEND=>=dev-qt/qtgui-4.5:4 dbus? ( >=dev-qt/qtdbus-4.5:4 ) >=dev-qt/qtopengl-4.5:4 >=dev-qt/qtsql-4.5:4[sqlite] system-sqlite? ( dev-db/sqlite[fts3(+)] ) >=media-libs/taglib-1.8[mp4] >=dev-libs/glib-2.24.1-r1 dev-libs/libxml2 dev-libs/protobuf:= dev-libs/qjson media-libs/libechonest:= >=media-libs/libmygpo-qt-1.0.7 >=media-libs/chromaprint-0.6 media-libs/gstreamer:0.10 media-libs/gst-plugins-base:0.10 virtual/glu virtual/opengl ayatana? ( dev-libs/libindicate-qt ) cdda? ( dev-libs/libcdio ) ipod? ( >=media-libs/libgpod-0.8.0 ) lastfm? ( >=media-libs/liblastfm-1 ) mtp? ( >=media-libs/libmtp-1.0.0 ) moodbar? ( sci-libs/fftw:3.0 ) projectm? ( media-libs/glew ) dbus? ( udev? ( sys-fs/udisks:0 ) ) mms? ( media-plugins/gst-plugins-libmms:0.10 ) mtp? ( gnome-base/gvfs ) projectm? ( >=media-libs/libprojectm-1.2.0 ) media-plugins/gst-plugins-meta:0.10 media-plugins/gst-plugins-gio:0.10 media-plugins/gst-plugins-soup:0.10 media-plugins/gst-plugins-taglib:0.10
+RDEPEND=app-crypt/qca:2 >=dev-qt/qtgui-4.5:4 dbus? ( >=dev-qt/qtdbus-4.5:4 ) >=dev-qt/qtopengl-4.5:4 >=dev-qt/qtsql-4.5:4[sqlite] system-sqlite? ( dev-db/sqlite[fts3(+)] ) >=media-libs/taglib-1.8[mp4] >=dev-libs/glib-2.24.1-r1 dev-libs/libxml2 dev-libs/protobuf:= dev-libs/qjson media-libs/libechonest:= >=media-libs/libmygpo-qt-1.0.7 >=media-libs/chromaprint-0.6 media-libs/gstreamer:0.10 media-libs/gst-plugins-base:0.10 virtual/glu virtual/opengl ayatana? ( dev-libs/libindicate-qt ) cdda? ( dev-libs/libcdio ) ipod? ( >=media-libs/libgpod-0.8.0 ) lastfm? ( >=media-libs/liblastfm-1 ) mtp? ( >=media-libs/libmtp-1.0.0 ) moodbar? ( sci-libs/fftw:3.0 ) projectm? ( media-libs/glew ) dbus? ( udev? ( sys-fs/udisks:0 ) ) mms? ( media-plugins/gst-plugins-libmms:0.10 ) mtp? ( gnome-base/gvfs ) projectm? ( >=media-libs/libprojectm-1.2.0 ) media-plugins/gst-plugins-meta:0.10 media-plugins/gst-plugins-gio:0.10 media-plugins/gst-plugins-soup:0.10 media-plugins/gst-plugins-taglib:0.10
 REQUIRED_USE=udev? ( dbus ) wiimote? ( dbus )
 SLOT=0
 SRC_URI=http://clementine-player.googlecode.com/files/clementine-1.2.0.tar.gz
 _eclasses_=cmake-utils	92319f03251f1235bc887cc84e5aef21	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	gnome2-utils	b66c7c3889d2dd0913e9f3d2ac1c0859	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=68596b2684e7bc21b31a6abecdb99cb2
+_md5_=5c5c7c9961c115b93de59caf13c1f8ed
