@@ -28,16 +28,17 @@ DIST chromium-33.0.1707.0-lite.tar.xz 154007504 SHA256 3dafd652ddc1c49f5d0594fe7
 DIST chromium-33.0.1707.0-testdata.tar.xz 112156276 SHA256 f36782ffd0c56dcc00f316b8267471e40afa72a37be1fa306a7ee20f5b9b4485 SHA512 dffe4cd94a32de09774abfdb3d46da401446416f0846a3498043951ffb7cc7f7279b11be67d2f300c109f3f7337a5c61f2558b4639e9a19b78a54bd375629e83 WHIRLPOOL d6d404a91c7a5118a8f61fe29c9677655cb411b27df38a8b7d450160161adfc39fffb1ff0755b8d3347147d3e30016f9bad8a2857b908d4d176bb1e3e1bdedb1
 EBUILD chromium-31.0.1650.48.ebuild 17190 SHA256 c55f914c79ca64879e11ed9aa7375f9b8363aea1727d7774d3cd04d923be434d SHA512 c3526996c3a60a219faffc98cafbc3176a008c870f8d9a75f65ac674b46641dd25c31d47798dc6ac38db1d371e8b1e1cfac2ec0c44895f1907d86ed65729ed57 WHIRLPOOL 2b7f8a29ff5f07505fc787b8a5c8a27082d0c63b89b3f09e8a8ec2b8dce2fe9a8c43e8f54aa723cfafc337103446f6263e4baf7962ea2dcdc98f1da1ba70286d
 EBUILD chromium-31.0.1650.57.ebuild 17196 SHA256 835f4dced7bb6b9e27a9f51f4cb6c48d14831e10185c48d93f8877cd82c0b440 SHA512 5d1bb7dfcef0e02102c317eecf924151fb8f1c73f4eb5378ec09b1a70c8af57be4db7389974f30480b65c9db9766788198a929a4d601c92120ce41683cddde68 WHIRLPOOL 966dbd5097f16702c8380b45b97dca3f4d1d35937cd892d6251658837854e57d0df4fea586bc6f9a1bd8feb9b5a52c8fece2ece8db1a006e80a657865148104f
-EBUILD chromium-32.0.1700.14.ebuild 17889 SHA256 669b930ccdfc59c65798b08beae7552c581060c375230c2d9fbfb5cb3d2aa8b7 SHA512 d0361266f4a348a5f085cdf9fde4b4caf7b5272c2e7919e3f1b320c546ebc193a26331c5801ab6403bb77dca52593a81171840d49e7f4de7dc690f43952515fd WHIRLPOOL 2c7d9cfb6caccf92ba987ed5f50ec4c2b59f7b32328ba46e48fe6d24785aa4344ecfe695696e02e502dc59eba1659c557547ee35f0f618941ecf97bfff6aecd6
+EBUILD chromium-32.0.1700.14.ebuild 18224 SHA256 597cb13c069e4f7b53ec29953852a1ad3baf0cd2bd7566ad1c4346e662fe80dc SHA512 7535da597686662bf18cd7e8e4502e705f106ffb0465b5ca755436dbd62b1cf9aa4778780e3917cc9c788c491e8aff5225e0f52e258a0d9ae1203182091ab964 WHIRLPOOL e52a3ad33ddb435ae199ceb9c8fc74798f553a3335b8a9b98b6965c52be2fb626bc6fa75e1cfa78f208237fb9ba91d366d1f4708fe821e4175b493817856d168
 EBUILD chromium-32.0.1700.6.ebuild 17891 SHA256 85d0063e184f892121e29c9b146b4f68b388e465c662297a8415e30e0cc8ab35 SHA512 05f41f85fe667d8419d4b87488947d918beb5c86254f676c95c935d7966e54c31135ad4266f1cd3b11c3d64805f0e75b9dc1d1615998097b5d4f306897cfcddd WHIRLPOOL dc6d482246775534b6f4018b9ba511e97c1c789256d8bd3f26711f0049b0fd44996736c356f657817ccc677c6a21703ae8f3aad41f0e130a0329c8b244a2a209
-EBUILD chromium-33.0.1707.0.ebuild 17924 SHA256 abce81fd8363b4e810b7612dd1df9595b2698c0413ce6492cd1f7c88764330ad SHA512 b257915e9228eb363ba52ca4aa9fef1219e8afb5ead1cc64cccc984233cd927b1b7ac387c43933cd107ca65407a9f9b0584a9b25307a001e47e018cb029870b6 WHIRLPOOL 6418157b631387d7a10e757ad4160927b78f5affa49be82522ef9388c47226309957915f737e1db63241d4f53c839f55435989baf77e03aafe2ceb11f973801b
-MISC ChangeLog 89316 SHA256 7d99bc57790438b399548ce328a984b14d46146545a6689441a60308925f4d7e SHA512 56b676250445caf385c375ea6bd7309eae855f733a4f432b4054aa4c70edc2d3a769946465b2c098be27215db573540c68f7c973b98f7b16c7216aceb23512d0 WHIRLPOOL 882adea8a592a8a18b9df8f7c0bdf67cc822379a9e1208bf5a67f8433bec1b9972367a561ad818f97afb8533eed3ef69e6d51ae7349d54d20c2083f2115ee3a4
+EBUILD chromium-33.0.1707.0.ebuild 18256 SHA256 229079d38983d6caa53f641cc8afaf73d48466b692efc904b0c1519c9c57cbf3 SHA512 d6bb57c2ae35fc72692d14d47f3c3b6eb5abd4dfd9c2902e57bd3344e107a6bbd9a071b899143fee4a1285c5f08e617a9fcc0ade8dbcb4a5959db841b7085364 WHIRLPOOL 012994cddcf2c079fc5c66f9fdee9d8959d50b6dc95e788a4c8b3573b9cef03f61ded566e78a887daaafdebdba0397ce421b1678fc38bffbaaa8aaedb3265d39
+MISC ChangeLog 89529 SHA256 67ab129a57b6713010c37260203633feed6936c9627398beaf4ebceaa0a318d6 SHA512 8d67f3e3aab3ef8d21b8dfc2623c7b8f5a205b32a2a90a89952c35031ac7e1c36f490e8ee245d4e94cd3a2c823c4aebf2cc765d2cc34ffd01675dca187c2932f WHIRLPOOL 620578cf53deabbbb66e0bdb10cf771045313776d084c5136358b63a293c0c107c09a87be0dbd03fe39f28fe4436e86920c7cb4f6729b408bc56112241c6cdd3
 MISC ChangeLog-2011 114031 SHA256 e2c2c75785c5eaf78b6efe01e357279cbb7be0c89d00b4053f475e963916fa54 SHA512 8e14759348333bdbd7c338080472789d7bbb1ece1ca5817bac6306bdcb33dda1e23bf3055cbb3b7bcee9362b6900bba1ace7ba73f353570a74d3ed761c9198cc WHIRLPOOL 810b6423c53f892a4b0964380b8190dec2a8783d560a9cb0baec93a77d879186201055382ca05975ae242e16728529ae85445db003fdd425355292d17817157b
+MISC chromium-32.0.1700.14.ebuild.orig 17889 SHA256 669b930ccdfc59c65798b08beae7552c581060c375230c2d9fbfb5cb3d2aa8b7 SHA512 d0361266f4a348a5f085cdf9fde4b4caf7b5272c2e7919e3f1b320c546ebc193a26331c5801ab6403bb77dca52593a81171840d49e7f4de7dc690f43952515fd WHIRLPOOL 2c7d9cfb6caccf92ba987ed5f50ec4c2b59f7b32328ba46e48fe6d24785aa4344ecfe695696e02e502dc59eba1659c557547ee35f0f618941ecf97bfff6aecd6
 MISC metadata.xml 622 SHA256 0cc15c6cfce29d9372d650e883075630c844e262bb354a64c96d7e51580d25c9 SHA512 957d3b569ce2259d250681d91edf31d7dcea412d84c79017413866691d3b6fe27076f7d0d7c14f41421254438064d15c90d84940a3c6aa9c307c4db4277eadd1 WHIRLPOOL d621daeca803c0aa06b7abff6207a16cb9122c7ae6f7b02b57be88dd551ef4410fd20d592ea8ee7062bbef54ce09079dacd51e514febdebb16da24d8fb55f823
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlKG7psACgkQC77qH+pIQ6QwRQD/U6g3w9ixp/UifunlFieat7uY
-3rqXsWFNGpgRi7T5ItMBALkFecZgVxuw4WuBT9PfdS+wddiPYaLNNZ0Da+D1rArD
-=lLtV
+iEYEAREIAAYFAlKHCrAACgkQuUQtlDBCeQISEACfYWge4sAUna+JI1efmaJiBi3Q
+UUoAn3wjcirWxMm0/vDlsSD1pyEGwqyz
+=JzRW
 -----END PGP SIGNATURE-----
